<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileMenu">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="Profile"
            android:textSize="24dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
    <!-- end-->

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:background="@drawable/bg_bottom_outline"
            android:paddingBottom="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/accountProfilePic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar_profile"/>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/accountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/account_name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
        <!-- end-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editProfileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:drawablePadding="15dp"
                android:textColor="@color/black"
                android:text="@string/edit_profile"
                app:drawableLeftCompat="@drawable/ic_profile" />
            <TextView
                android:id="@+id/settingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:drawablePadding="15dp"
                android:textColor="@color/black"
                android:text="@string/settings"
                app:drawableLeftCompat="@drawable/ic_settings" />
            <TextView
                android:id="@+id/helpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:drawablePadding="15dp"
                android:textColor="@color/black"
                android:text="@string/help_and_support"
                app:drawableLeftCompat="@drawable/ic_support" />
            <TextView
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:drawablePadding="15dp"
                android:textColor="@color/black"
                android:text="@string/log_out"
                app:drawableLeftCompat="@drawable/ic_logout" />

        </LinearLayout>






    </LinearLayout>

<!--    <com.google.android.material.tabs.TabLayout-->
<!--        android:id="@+id/tabLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"-->
<!--        tools:layout_editor_absoluteX="0dp">-->

<!--        <com.google.android.material.tabs.TabItem-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Uploads"/>-->
<!--        <com.google.android.material.tabs.TabItem-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Favorites"/>-->

<!--    </com.google.android.material.tabs.TabLayout>-->

<!--    <androidx.viewpager.widget.ViewPager-->
<!--        android:id="@+id/viewPager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/bottomNav"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tabLayout"-->
<!--        tools:layout_editor_absoluteX="16dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>